fix project structure, add game scenes, backgrounds

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Exploration</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <title>Space Exploration Quest</title>
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <script defer src="/assets/js/script.js"></script>
 </head>
 <body>
-    
+    <h1>Space Exploration Quest</h1>
+    <div id="game-area"></div>
 </body>
 </html>
