planet choice styling, add scene options function

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <!-- Audio Elements -->
     <audio id="pickup-sound" src="/assets/media/sounds/pickup.mp3"></audio>
     <audio id="travel-sound" src="/assets/media/sounds/travel.mp3"></audio>
-    <audio id="jumop-sound" src="/assets/media/sounds/jumpScare.mp3"></audio>
+    <audio id="jump-sound" src="/assets/media/sounds/jumpScare.mp3"></audio>
 </body>
 </html>
