add game area, render planet background

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <!-- Canvas Element
     <canvas id="gameCanvas"></canvas> -->
+    <main id="game-main"></main>
+    
 
     <!-- Inventory Panel (Overlay) -->
     <div id="inventory">
