--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
     <audio id="pickup-sound" src="/assets/media/sounds/pickup.mp3"></audio>
     <audio id="travel-sound" src="/assets/media/sounds/travel.mp3"></audio>
     <audio id="jump-sound" src="/assets/media/sounds/jumpScare.mp3"></audio>
+    <audio id="alien-sound" src="/assets/media/sounds/alienVoice.mp3"></audio>
+
 </body>
 </html>
