fix item picked up localsotrage

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Space Exploration Quest</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script defer src="/assets/js/script.js"></script>
+
 </head>
 <body>
     <header>
