--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main id="game-main"></main>
     <!-- Inventory Panel (Overlay) -->
-    <div id="inventory" aria-hidden="true">
+    <div id="inventory">
         <h2>Inventory</h2>
         <ul id="inventory-list">
         </ul>
